fixed problems with balloons interacting badly with drag-and-drop; fixed display on IE and Safari; now cosmetic problem when dragging on IE!

--- a/htdocs/css/gbrowse.css
+++ b/htdocs/css/gbrowse.css
@@ -90,13 +90,6 @@ TH.linkmenu       {
                     CURSOR: help;
                     TEXT-DECORATION: none
                   }
-.titlebar         {  background-color: khaki; 
-                     position: absolute;
-                     cursor: crosshair;
-                     text-align: right;
-                     font-size: 9pt;
-                     font-weight: bold;
-                  }
 #autoComplete1 {  position:relative;text-align:left;z-index:9050; }
 #autoCompleteSearch1 { position:relative; }
 #autoCompleteInput1     { position:relative;width:20em;height:1.7em}
