--- a/htdocs/css/titlebar-default.css
+++ b/htdocs/css/titlebar-default.css
@@ -1,7 +1,6 @@
 .titlebar         {
                      position: absolute;
                      text-align: right;
-		     display: inline;
                   }
 .titlebar_inactive {
                      position: absolute;
