--- a/htdocs/css/tracks.css
+++ b/htdocs/css/tracks.css
@@ -1,8 +1,12 @@
 .track            { 
 		  text-align: center;
+		  margin-left: auto;
+		  margin-right: auto;
 		  }
 .scale            { 
 		  text-align: center;
+		  margin-left: auto;
+		  margin-right: auto;
 		  }
 IMG.trackimg      {  
                        margin-top: -10px;
@@ -10,14 +14,14 @@ IMG.trackimg      {
                   }
 .titlebar         {  background-color: #FFD39B;
                      cursor: crosshair;
-                     z-index: 1;
+                     z-index: 10;
                      opacity: 1.0;
                      font-size: 9pt;
                      font-weight: bold;
                   }
 .titlebar_inactive { background-color: #E0E0E0;
                      cursor: crosshair;
-                     z-index: 1;
+                     z-index: 10;
                      opacity: 1.0;
                      font-size: 9pt;
                      font-weight: bold;
